--- a/config/good/multipleServerName.conf
+++ b/config/good/multipleServerName.conf
@@ -1,7 +1,7 @@
 # pour tester ce fichier, il faut modifier le fichier /etc/hosts
 # en ajoutant les lignes suivantes:
 # ip main.com
-# ip toukoum.com
+# ip Spiderserv.com
 
 server {
 	listen 3434
@@ -17,7 +17,7 @@ server {
 
 	server_name toukoum.com
 
-	root ./www/toukoum
+	root ./www/Spiderserv
 	index toukoum.html
 
 }
