Parsing termine mais probleme location verif

--- a/config/good/webserv.conf
+++ b/config/good/webserv.conf
@@ -3,7 +3,7 @@ server {
 	listen 3434
 
 	location / {
-		allow_methods GET POST PUT DELETE
+		allow_methods GET POST DELETE
 		root ./www/main
 		cgi_extension .py /usr/bin/python3
 		cgi_extension .php /usr/bin/php-cgi
