<work in progress> removed the hardcoded value from handleGetRequest

--- a/config/good/goodweb.conf
+++ b/config/good/goodweb.conf
@@ -1,9 +1,11 @@
 server {
 	listen 3434
+	index index.html
 
 	location / {
 		allow_methods GET POST DELETE
 		root ./goodweb/
+		index index.html
 		cgi_extension .py /usr/bin/python3
 		cgi_extension .php /usr/bin/php-cgi
 		cgi_extension .sh /usr/bin/bash
