<work in progress> custom error page loading

--- a/config/good/customError.conf
+++ b/config/good/customError.conf
@@ -3,6 +3,6 @@ server {
 	root ./www/main
 	index index.html
 
-	error_page 404 ./www/main/customErrorPages/404.html
-	error_page 403 ./www/main/customErrorPages/403.html
+	error_page 404 ./web/error_page/404.html
+	error_page 403 ./web/error_page/403.html
 }
