--- a/config/good/goodweb.conf
+++ b/config/good/goodweb.conf
@@ -1,6 +1,9 @@
 server {
 	listen 3434
 	index index.html
+	server_name test
+
+	upload_path ./goodweb/main/cgi-files/uploads-files/
 
 	location / {
 		allow_methods GET POST DELETE
@@ -9,7 +12,6 @@ server {
 		cgi_extension .py /usr/bin/python3
 		cgi_extension .php /usr/bin/php-cgi
 		cgi_extension .sh /usr/bin/bash
-		upload_path ./goodweb/main/cgi-bin/uploads
 	}
 
 	location /index {
@@ -28,9 +30,4 @@ server {
 		index download.py
 	}
 
-	location /uploads {
-		root ./goodweb/main
-		cgi_extension .py /usr/bin/python3
-		index uploads.py
-	}
 }
