upload path revu

--- a/config/good/goodweb.conf
+++ b/config/good/goodweb.conf
@@ -3,7 +3,7 @@ server {
 	index index.html
 	server_name test
 
-	upload_path ./goodweb/main/cgi-files/uploads-files/
+	#upload_path ./goodweb/main/cgi-files/uploads-files/
 
 	location / {
 		allow_methods GET POST DELETE
@@ -17,17 +17,26 @@ server {
 	location /index {
 		root ./goodweb/
 		index index.html
+		allow_methods GET POST DELETE
 	}
 
 	location /list {
 		autoindex on
 		root ./goodweb
+		allow_methods GET POST DELETE
 	}
 
-	location /download {
+	location /upload {
 		root ./goodweb/main
 		cgi_extension .py /usr/bin/python3
-		index download.py
+		index upload.html
+		allow_methods GET POST DELETE
 	}
+
+	#location /download {
+	#	root ./goodweb/main
+	#	cgi_extension .py /usr/bin/python3
+	#	allow_methods GET POST DELETE
+	#}
 
 }
