--- a/config/good/goodweb.conf
+++ b/config/good/goodweb.conf
@@ -30,6 +30,7 @@ server {
 		root ./goodweb/main
 		cgi_extension .py /usr/bin/python3
 		index upload.html
+		upload_path ./goodweb/main/cgi-files/uploads-files/
 		allow_methods GET POST DELETE
 	}
 
