checkpoint peaufiner les cgi

--- a/config/good/goodweb.conf
+++ b/config/good/goodweb.conf
@@ -26,10 +26,17 @@ server {
 		allow_methods GET POST DELETE
 	}
 
-	location /upload {
+	location /uploads {
 		root ./goodweb/main
 		cgi_extension .py /usr/bin/python3
 		index upload.html
+		upload_path ./goodweb/main/cgi-files/uploads-files/
+		allow_methods GET POST DELETE
+	}
+
+	location /cgi-files {
+		root ./goodweb/main
+		cgi_extension .py /usr/bin/python3
 		upload_path ./goodweb/main/cgi-files/uploads-files/
 		allow_methods GET POST DELETE
 	}
