redirection, server_name, find server and location correction

--- a/config/good/goodweb.conf
+++ b/config/good/goodweb.conf
@@ -1,7 +1,7 @@
 server {
 	listen 3434
 	index index.html
-	server_name test
+	server_name spider_web
 
 	#upload_path ./goodweb/main/cgi-files/uploads-files/
 
@@ -18,6 +18,10 @@ server {
 		root ./goodweb/
 		index index.html
 		allow_methods GET POST DELETE
+	}
+
+	location /youtube {
+		return 301 https://youtube.com
 	}
 
 	location /list {
@@ -47,4 +51,15 @@ server {
 	#	allow_methods GET POST DELETE
 	#}
 
+}
+
+server {
+	listen 3434
+	index index.html
+	server_name test
+	location / {
+		allow_methods GET POST DELETE
+		root ./web/
+		index index.html
+	}
 }
