--- a/config/good/goodweb.conf
+++ b/config/good/goodweb.conf
@@ -33,7 +33,7 @@ server {
 	location /uploads {
 		root ./goodweb/main
 		cgi_extension .py /usr/bin/python3
-		index upload.html
+		index uploads.html
 		upload_path ./goodweb/main/cgi-files/uploads-files/
 		allow_methods GET POST DELETE
 	}
