nice upgrade checkpoint

--- a/config/good/goodweb.conf
+++ b/config/good/goodweb.conf
@@ -34,7 +34,7 @@ server {
 		root ./goodweb/main
 		cgi_extension .py /usr/bin/python3
 		index uploads.html
-		upload_path ./goodweb/main/cgi-files/uploads-files/
+		upload_path ./goodweb/list/
 		allow_methods GET POST DELETE
 	}
 
