--- a/config/good/goodweb.conf
+++ b/config/good/goodweb.conf
@@ -10,7 +10,6 @@ server {
 		root ./goodweb/
 		index index.html
 		cgi_extension .py /usr/bin/python3
-		cgi_extension .php /usr/bin/php-cgi
 		cgi_extension .sh /usr/bin/bash
 	}
 
@@ -41,15 +40,10 @@ server {
 	location /cgi-files {
 		root ./goodweb/main
 		cgi_extension .py /usr/bin/python3
+		cgi_extension .sh /usr/bin/bash
 		upload_path ./goodweb/main/cgi-files/uploads-files/
 		allow_methods GET POST DELETE
 	}
-
-	#location /download {
-	#	root ./goodweb/main
-	#	cgi_extension .py /usr/bin/python3
-	#	allow_methods GET POST DELETE
-	#}
 
 }
 
