faire verif checkpoint

--- a/config/good/allowMethod.conf
+++ b/config/good/allowMethod.conf
@@ -3,8 +3,12 @@ server {
 
 	location / {
 		allow_methods DELETE
-		root ./www/main
+		root ./goodweb/
 		index index.html
+	}
+
+	location /downloads {
+		root ./goodweb/main
 	}
 
 }
