checkpoint attention rot

--- a/config/good/goodweb.conf
+++ b/config/good/goodweb.conf
@@ -1,9 +1,8 @@
 server {
 	listen 3434
 	index index.html
-	server_name spider_web
 
-	#upload_path ./goodweb/main/cgi-files/uploads-files/
+	#upload_path ./goodweb/main/cgi-bin/uploads-files/
 
 	location / {
 		allow_methods GET POST DELETE
@@ -26,7 +25,7 @@ server {
 	location /list {
 		autoindex on
 		root ./goodweb
-		allow_methods GET POST DELETE
+		allow_methods GET POST
 	}
 
 	location /uploads {
@@ -37,12 +36,19 @@ server {
 		allow_methods GET POST DELETE
 	}
 
-	location /cgi-files {
+	location /cgi-bin {
 		root ./goodweb/main
 		cgi_extension .py /usr/bin/python3
 		cgi_extension .sh /usr/bin/bash
-		upload_path ./goodweb/main/cgi-files/uploads-files/
+		upload_path ./goodweb/main/cgi-bin/uploads-files/
 		allow_methods GET POST DELETE
+	}
+
+	location /rot {
+	root ./goodweb/main
+	index rot.html
+	cgi_extension .py /usr/bin/python3
+	allow_methods GET POST DELETE
 	}
 
 }
