--- a/config/good/customError.conf
+++ b/config/good/customError.conf
@@ -1,8 +1,8 @@
 server {
 	listen 3434
-	root ./www/main
+	root ./goodweb/
 	index index.html
 
-	error_page 404 ./web/error_page/404.html
-	error_page 403 ./web/error_page/403.html
+	error_page 404 ./goodweb/main/error_page/404.html
+	error_page 500 ./goodweb/main/error_page/500.html
 }
