--- a/config/good/goodweb.conf
+++ b/config/good/goodweb.conf
@@ -1,6 +1,5 @@
 server {
 	listen 3434
-	index index.html
 
 	#upload_path ./goodweb/main/cgi-bin/uploads-files/
 
@@ -8,8 +7,6 @@ server {
 		allow_methods GET POST DELETE
 		root ./goodweb/
 		index index.html
-		cgi_extension .py /usr/bin/python3
-		cgi_extension .sh /usr/bin/bash
 	}
 
 	location /index {
@@ -47,7 +44,6 @@ server {
 	location /rot {
 	root ./goodweb/main
 	index rot.html
-	cgi_extension .py /usr/bin/python3
 	allow_methods GET POST DELETE
 	}
 
@@ -55,6 +51,7 @@ server {
 
 server {
 	listen 3434
+	listen 2132
 	index index.html
 	server_name test
 	location / {
